--- a/www/py-httpx-socks/Makefile
+++ b/www/py-httpx-socks/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.22 2024/11/11 07:29:24 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2024/12/26 21:45:06 adam Exp $
 
-DISTNAME=	httpx_socks-0.9.2
+DISTNAME=	httpx_socks-0.10.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/httpx-socks/}
@@ -11,8 +11,8 @@ COMMENT=	Proxy (HTTP, SOCKS) transports for httpx
 LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-httpx>=0.21.0:../../www/py-httpx
-DEPENDS+=	${PYPKGPREFIX}-httpcore>=0.17.3:../../www/py-httpcore
+DEPENDS+=	${PYPKGPREFIX}-httpx>=0.28.0:../../www/py-httpx
+DEPENDS+=	${PYPKGPREFIX}-httpcore>=1.0:../../www/py-httpcore
 DEPENDS+=	${PYPKGPREFIX}-python-socks>=2.0.0:../../net/py-python-socks
 
 USE_LANGUAGES=	# none
