--- a/net/py-lexicon/Makefile
+++ b/net/py-lexicon/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.94 2024/12/10 06:34:37 adam Exp $
+# $NetBSD: Makefile,v 1.95 2024/12/26 21:50:40 adam Exp $
 
-DISTNAME=	dns_lexicon-3.19.0
+DISTNAME=	dns_lexicon-3.20.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/dns_//}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/dns-lexicon/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/AnalogJ/lexicon
+HOMEPAGE=	https://github.com/dns-lexicon/dns-lexicon
 COMMENT=	Manipulate DNS records on various DNS providers
 LICENSE=	mit
 
