--- a/textproc/py-sphinxcontrib-spelling/Makefile
+++ b/textproc/py-sphinxcontrib-spelling/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2024/11/11 07:29:09 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2024/12/26 22:14:08 adam Exp $
 
-DISTNAME=	sphinxcontrib-spelling-8.0.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
+DISTNAME=	sphinxcontrib_spelling-8.0.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/sphinxcontrib-spelling/}
 
@@ -14,6 +13,7 @@ LICENSE=	2-clause-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
 DEPENDS+=	${PYPKGPREFIX}-enchant>=3.2.2nb1:../../textproc/py-enchant
+DEPENDS+=	${PYPKGPREFIX}-requests>=2.32.3:../../devel/py-requests
 DEPENDS+=	${PYPKGPREFIX}-sphinx>=3.0:../../textproc/py-sphinx
 TEST_DEPENDS+=	git-base-[0-9]*:../../devel/git-base
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
