--- a/net/qbittorrent/Makefile
+++ b/net/qbittorrent/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.80 2024/12/07 18:12:54 wiz Exp $
+# $NetBSD: Makefile,v 1.81 2024/12/26 22:26:01 adam Exp $
 
-DISTNAME=	qbittorrent-5.0.2
+DISTNAME=	qbittorrent-5.0.3
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=qbittorrent/}
 GITHUB_PROJECT=	qBittorrent
