--- a/devel/qt6-qtwayland/Makefile
+++ b/devel/qt6-qtwayland/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2024/11/14 22:19:35 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2024/12/26 23:06:53 adam Exp $
 
 DISTNAME=	qtwayland-everywhere-src-${QTVERSION}
 PKGNAME=	qt6-qtwayland-${QTVERSION}
-PKGREVISION=	3
 COMMENT=	Qt6 wayland
 CATEGORIES=	devel
 LICENSE=	gnu-lgpl-v3 OR gnu-gpl-v2 OR gnu-gpl-v3
