--- a/x11/py-sip6/Makefile
+++ b/x11/py-sip6/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.22 2024/11/11 07:29:31 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2024/12/26 23:08:14 adam Exp $
 
 # Before updating sip, geography/qgis (as the most demanding sip user
 # currently known) must be tested to build ok.  The 6.8.0 release of
 # sip was very broken, and .0 releases of sip should be viewed with
 # extreme caution and probably skipped.
-DISTNAME=	sip-6.8.6
+DISTNAME=	sip-6.9.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/sip/sip6/}
 CATEGORIES=	x11 python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/sip/}
@@ -24,8 +24,6 @@ DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 USE_LANGUAGES=	c c++
 
 PYTHON_SELF_CONFLICT=	yes
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/pyversion.mk"
 
