--- a/math/py-xarray/Makefile
+++ b/math/py-xarray/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.26 2024/11/11 07:28:43 wiz Exp $
+# $NetBSD: Makefile,v 1.27 2024/12/26 23:20:42 adam Exp $
 
-DISTNAME=	xarray-2024.9.0
+DISTNAME=	xarray-2024.11.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=x/xarray/}
