--- a/www/py-pystache/Makefile
+++ b/www/py-pystache/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2023/09/03 10:54:20 adam Exp $
+# $NetBSD: Makefile,v 1.10 2024/12/26 23:32:16 adam Exp $
 
-DISTNAME=	pystache-0.6.5
+DISTNAME=	pystache-0.6.7
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pystache/}
@@ -10,13 +10,10 @@ HOMEPAGE=	https://github.com/PennyDreadfulMTG/pystache
 COMMENT=	Mustache for Python
 LICENSE=	mit
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
 
 USE_LANGUAGES=	# none
-
-USE_PKG_RESOURCES=	yes
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/pyversion.mk"
 .if ${PYTHON_VERSION} < 310
@@ -29,8 +26,5 @@ post-install:
 	${MV} ${bin} ${bin}-${PYVERSSUFFIX} || ${TRUE}
 .endfor
 
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} ${PYTHONBIN} -m unittest discover -v
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
