--- a/devel/py-protobuf/Makefile
+++ b/devel/py-protobuf/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.79 2024/11/11 07:28:19 wiz Exp $
+# $NetBSD: Makefile,v 1.80 2024/12/26 23:40:35 adam Exp $
 
-DISTNAME=	protobuf-5.28.3
+DISTNAME=	protobuf-5.29.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/protobuf/}
