--- a/net/py-grpcio/Makefile
+++ b/net/py-grpcio/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.87 2024/11/11 07:28:48 wiz Exp $
+# $NetBSD: Makefile,v 1.88 2024/12/26 23:49:53 adam Exp $
 
-DISTNAME=	grpcio-1.67.1
+DISTNAME=	grpcio-1.68.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=g/grpcio/}
