--- a/audio/forked-daapd/Makefile
+++ b/audio/forked-daapd/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.42 2024/11/14 22:18:40 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2024/12/26 23:57:18 adam Exp $
 
 DISTNAME=	forked-daapd-27.4
-PKGREVISION=	35
+PKGREVISION=	36
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=ejurgensen/}
 GITHUB_RELEASE=	${PKGVERSION_NOREV}
