--- a/audio/mixxx/Makefile
+++ b/audio/mixxx/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.67 2024/11/17 07:15:34 wiz Exp $
+# $NetBSD: Makefile,v 1.68 2024/12/26 23:57:18 adam Exp $
 
 DISTNAME=	mixxx-2.3.1
-PKGREVISION=	37
+PKGREVISION=	38
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mixxxdj/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
