--- a/audio/strawberry/Makefile
+++ b/audio/strawberry/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.73 2024/11/14 22:18:46 wiz Exp $
+# $NetBSD: Makefile,v 1.74 2024/12/26 23:57:19 adam Exp $
 
 DISTNAME=	strawberry-1.0.23
-PKGREVISION=	6
+PKGREVISION=	7
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=strawberrymusicplayer/}
 GITHUB_RELEASE=	${PKGVERSION_NOREV}
