--- a/chat/ekg/Makefile
+++ b/chat/ekg/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.84 2024/11/14 22:18:49 wiz Exp $
+# $NetBSD: Makefile,v 1.85 2024/12/26 23:57:19 adam Exp $
 
 DISTNAME=	ekg-20200501
-PKGREVISION=	22
+PKGREVISION=	23
 CATEGORIES=	chat
 MASTER_SITES=	http://ekg.chmurka.net/
 MASTER_SITES+=	http://ekg.chmurka.net/archive/
