--- a/databases/mysql80-server/Makefile
+++ b/databases/mysql80-server/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2024/12/24 18:52:22 adam Exp $
+# $NetBSD: Makefile,v 1.31 2024/12/26 23:57:19 adam Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
+PKGREVISION=	1
 COMMENT=	MySQL 8, a free SQL database (server)
 
 CONFLICTS=	mysql3-server-[0-9]*
