--- a/devel/py-compizconfig/Makefile
+++ b/devel/py-compizconfig/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.104 2024/11/14 22:19:34 wiz Exp $
+# $NetBSD: Makefile,v 1.105 2024/12/26 23:57:20 adam Exp $
 
 PKGVER=			0.8.4
 DISTNAME=		compizconfig-python-${PKGVER}
 PKGNAME=		${PYPKGPREFIX}-compizconfig-${PKGVER}
-PKGREVISION=		84
+PKGREVISION=		85
 CATEGORIES=		devel gnome
 MASTER_SITES=		#
 
