--- a/geography/merkaartor/Makefile
+++ b/geography/merkaartor/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.141 2024/11/14 22:20:02 wiz Exp $
+# $NetBSD: Makefile,v 1.142 2024/12/26 23:57:20 adam Exp $
 
 DISTNAME=	merkaartor-0.20.0
-PKGREVISION=	6
+PKGREVISION=	7
 CATEGORIES=	geography
 MASTER_SITES=	${MASTER_SITE_GITHUB:=openstreetmap/}
 GITHUB_PROJECT=	merkaartor
