--- a/geography/qgis/Makefile
+++ b/geography/qgis/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.231 2024/11/26 23:25:21 gdt Exp $
+# $NetBSD: Makefile,v 1.232 2024/12/26 23:57:20 adam Exp $
 
 # This is intentionally 3.34 Long Term Release.  Please do not update
 # to later branches, and instead discuss whether/how we want multiple
 # versions, or to only track one LTR branch.
 DISTNAME=	qgis-3.34.13
+PKGREVISION=	1
 CATEGORIES=	geography
 MASTER_SITES=	https://qgis.org/downloads/
 EXTRACT_SUFX=	.tar.bz2
