--- a/multimedia/vlc/Makefile
+++ b/multimedia/vlc/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.301 2024/11/14 22:21:02 wiz Exp $
+# $NetBSD: Makefile,v 1.302 2024/12/26 23:57:21 adam Exp $
 
 DISTNAME=		vlc-3.0.21
-PKGREVISION=		4
+PKGREVISION=		5
 CATEGORIES=		multimedia
 MASTER_SITES=		https://download.videolan.org/pub/videolan/vlc/${PKGVERSION_NOREV}/
 EXTRACT_SUFX=		.tar.xz
