--- a/net/frr/Makefile
+++ b/net/frr/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.21 2024/09/21 10:24:30 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2024/12/26 23:57:22 adam Exp $
 
 GITHUB_PROJECT=	frr
 VERSION=	9.1
 GITHUB_TAG=	frr-${VERSION}
 DISTNAME=	frr-${VERSION}
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=FRRouting/}
 
