--- a/net/kopete/Makefile
+++ b/net/kopete/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.86 2024/12/03 13:43:46 jperkin Exp $
+# $NetBSD: Makefile,v 1.87 2024/12/26 23:57:22 adam Exp $
 
 DISTNAME=	kopete-${KAPPSVER}
-PKGREVISION=	9
+PKGREVISION=	10
 CATEGORIES=	net
 
 HOMEPAGE=	https://kde.org/applications/internet/kopete/
