--- a/net/mosh/Makefile
+++ b/net/mosh/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.44 2024/09/21 10:24:30 wiz Exp $
+# $NetBSD: Makefile,v 1.45 2024/12/26 23:57:22 adam Exp $
 
 DISTNAME=	mosh-1.4.0
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=	net
 MASTER_SITES=	https://mosh.org/
 
