--- a/sysutils/collectd-pinba/Makefile
+++ b/sysutils/collectd-pinba/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.11 2024/09/21 10:24:31 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/26 23:57:22 adam Exp $
 
 COLLECTD_PACKAGE=	pinba
 
 COMMENT=		Statistics collection daemon - pinba plugin
-PKGREVISION=		9
+PKGREVISION=		10
 
 .include "../../devel/protobuf-c/buildlink3.mk"
 COLLECTD_LIB.protobuf-c=${BUILDLINK_PREFIX.protobuf-c}
