--- a/graphics/librsvg/Makefile
+++ b/graphics/librsvg/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.167 2024/12/27 08:19:59 wiz Exp $
+# $NetBSD: Makefile,v 1.168 2024/12/27 08:47:57 wiz Exp $
 
-DISTNAME=	librsvg-2.58.1
-PKGREVISION=	4
+DISTNAME=	librsvg-2.59.2
 CATEGORIES=	graphics gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/librsvg/${PKGVERSION_NOREV:R}/}
 EXTRACT_SUFX=	.tar.xz
@@ -11,48 +10,35 @@ HOMEPAGE=	https://wiki.gnome.org/LibRsvg
 COMMENT=	SVG library for GNOME
 LICENSE=	gnu-lgpl-v2.1
 
-USE_LANGUAGES+=		c c++
-USE_LIBTOOL=		yes
-USE_TOOLS+=		pkg-config gmake aclocal autoconf automake
-GNU_CONFIGURE=		yes
-CONFIGURE_ARGS+=	--disable-Bsymbolic
-TEST_TARGET=		check
-
-PYTHON_FOR_BUILD_ONLY=		tool
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
 # Requires rst2man to generate rsvg-convert.1
 TOOL_DEPENDS+=		${PYPKGPREFIX}-docutils-[0-9]*:../../textproc/py-docutils
 # Requires gi-docgen to generate HTML format API documentation
 TOOL_DEPENDS+=		${PYPKGPREFIX}-gi-docgen>=2022.1nb1:../../devel/py-gi-docgen
+TOOL_DEPENDS+=		cargo-c>=0.9.19:../../devel/cargo-c
+
+USE_LANGUAGES+=		c c++
+USE_TOOLS+=		pkg-config
+TEST_TARGET=		check
+
+PYTHON_FOR_BUILD_ONLY=		tool
 
 RUSTFLAGS+=	-C link-arg=${COMPILER_RPATH_FLAG}${BUILDLINK_PREFIX.cairo}/lib
 
 BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--gc-sections
 
-PKGCONFIG_OVERRIDE=	librsvg.pc.in
+PKGCONFIG_OVERRIDE=		output/meson-private/librsvg-2.0.pc
+PKGCONFIG_OVERRIDE_STAGE=	post-configure
 
 SUBST_CLASSES+=		rst2man
 SUBST_MESSAGE.rst2man=	Fixing rst2man name used by pkgsrc due to versioning.
 SUBST_STAGE.rst2man=	pre-configure
-SUBST_FILES.rst2man=	configure
+SUBST_FILES.rst2man=	meson.build
 SUBST_SED.rst2man=	-e 's,rst2man.py,rst2man-${PYVERSSUFFIX},g'
 
 .include "cargo-depends.mk"
 
-.include "../../mk/bsd.prefs.mk"
-
-# librsvg broken on aarch64 by rustc>=1.54.0 including 1.57.0 due to:
-# libtool: error: object name conflicts in archive
-.if ${MACHINE_PLATFORM:MNetBSD-*-aarch64} || ${MACHINE_PLATFORM:MDarwin-*-aarch64}
-RUSTFLAGS+=	-C target-feature=-lse
-PKG_LIBTOOL=	${WRKDIR}/libtool
-pre-configure:
-	sed 's,$$AR t "$$f_ex_an_ar_oldlib",& | grep -v lse.o,'	\
-	  < ${PREFIX}/bin/libtool > ${WRKDIR}/libtool
-	chmod +x ${WRKDIR}/libtool
-.endif
-
+.include "../../devel/meson/build.mk"
+.include "../../lang/python/tool.mk"
 BUILDLINK_DEPMETHOD.gobject-introspection+=	build
 .include "../../devel/gobject-introspection/buildlink3.mk"
 BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.50.0
@@ -67,7 +53,7 @@ BUILDLINK_API_DEPENDS.cairo+=	cairo>=1.18
 BUILDLINK_API_DEPENDS.libxml2+=	libxml2>=2.9
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../graphics/gdk-pixbuf2/buildlink3.mk"
-RUST_REQ=	1.65.0
+RUST_REQ=	1.77.2
 .include "../../lang/rust/cargo.mk"
 .include "../../lang/python/pyversion.mk"
 .include "../../mk/bsd.pkg.mk"
