--- a/devel/py-ruff/patches/patch-Cargo.toml
+++ b/devel/py-ruff/patches/patch-Cargo.toml
@@ -1,10 +1,10 @@
-$NetBSD: patch-Cargo.toml,v 1.8 2024/10/24 17:45:57 adam Exp $
+$NetBSD: patch-Cargo.toml,v 1.9 2024/12/27 09:08:38 wiz Exp $
 
 Depends on unpublished crates. Can't use cargo.mk to fetch it.
 
 --- Cargo.toml.orig	1970-01-01 00:00:00.000000000 +0000
 +++ Cargo.toml
-@@ -94,7 +94,7 @@ libc = { version = "0.2.153" }
+@@ -96,7 +96,7 @@ libc = { version = "0.2.153" }
  libcst = { version = "1.1.0", default-features = false }
  log = { version = "0.4.17" }
  lsp-server = { version = "0.7.6" }
@@ -13,12 +13,12 @@ Depends on unpublished crates. Can't use cargo.mk to fetch it.
      "proposed",
  ] }
  matchit = { version = "0.8.1" }
-@@ -116,7 +116,7 @@ rand = { version = "0.8.5" }
- rayon = { version = "1.10.0" }
+@@ -119,7 +119,7 @@ rayon = { version = "1.10.0" }
  regex = { version = "1.10.2" }
  rustc-hash = { version = "2.0.0" }
--salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "254c749b02cde2fd29852a7463a33e800b771758" }
-+salsa = { path = "../salsa-254c749b02cde2fd29852a7463a33e800b771758" }
+ # When updating salsa, make sure to also update the revision in `fuzz/Cargo.toml`
+-salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "3c7f1694c9efba751dbeeacfbc93b227586e316a" }
++salsa = { path = "../salsa-3c7f1694c9efba751dbeeacfbc93b227586e316a" }
  schemars = { version = "0.8.16" }
  seahash = { version = "4.1.0" }
  serde = { version = "1.0.197", features = ["derive"] }
