--- a/x11/py-sip-qt6/Makefile
+++ b/x11/py-sip-qt6/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.5 2024/11/11 07:29:31 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2024/12/27 09:11:17 wiz Exp $
 
-DISTNAME=	PyQt6_sip-13.8.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/PyQt6_sip/sip-qt6/}
+DISTNAME=	pyqt6_sip-13.9.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pyqt6_sip/sip-qt6/}
 CATEGORIES=	x11 python
-MASTER_SITES=	${MASTER_SITE_PYPI:=P/PyQt6_sip/}
+MASTER_SITES=	${MASTER_SITE_PYPI:=p/pyqt6_sip/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/Python-SIP/sip
@@ -14,7 +14,7 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=30.3:../../devel/py-setuptools
 
 USE_LANGUAGES=	c c++
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+WHEEL_NAME=	${DISTNAME:S/pyqt6/PyQt6/}
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
