--- a/security/libssh/Makefile
+++ b/security/libssh/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.50 2024/08/25 06:19:12 wiz Exp $
+# $NetBSD: Makefile,v 1.51 2024/12/27 11:15:39 adam Exp $
 #
 # history: upstream renamed 0.11 to 0.1.1;
 # we have to use the old-style convention so that version compares work.
 
-VER=		0.10.6
+VER=		0.11.1
 DISTNAME=	libssh-${VER}
-PKGNAME=	libssh-0.106
+PKGNAME=	libssh-0.111
 CATEGORIES=	security
 MASTER_SITES=	https://www.libssh.org/files/${VER:R}/
 EXTRACT_SUFX=	.tar.xz
@@ -19,8 +19,8 @@ USE_LANGUAGES=		c c++
 PKGCONFIG_OVERRIDE+=	libssh.pc.cmake
 TEST_TARGET=		test
 
-CMAKE_CONFIGURE_ARGS+=		-DUNIT_TESTING=ON
-CMAKE_CONFIGURE_ARGS+=		-DWITH_EXAMPLES=OFF
+CMAKE_CONFIGURE_ARGS+=	-DUNIT_TESTING=ON
+CMAKE_CONFIGURE_ARGS+=	-DWITH_EXAMPLES=OFF
 
 LDFLAGS.SunOS+=		-lnsl -lsocket
 
