--- a/math/gsl/Makefile
+++ b/math/gsl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.45 2021/12/07 18:16:00 wiz Exp $
+# $NetBSD: Makefile,v 1.46 2024/12/27 17:21:13 adam Exp $
 
-DISTNAME=	gsl-2.7.1
+DISTNAME=	gsl-2.8
 CATEGORIES=	math devel
 MASTER_SITES=	${MASTER_SITE_GNU:=gsl/}
 
@@ -9,9 +9,9 @@ HOMEPAGE=	https://www.gnu.org/software/gsl/gsl.html
 COMMENT=	The GNU Scientific Library
 LICENSE=	gnu-gpl-v3
 
-USE_LIBTOOL=		yes
-GNU_CONFIGURE=		yes
-INFO_FILES=		yes
-TEST_TARGET=		check
+USE_LIBTOOL=	yes
+GNU_CONFIGURE=	yes
+INFO_FILES=	yes
+TEST_TARGET=	check
 
 .include "../../mk/bsd.pkg.mk"
